Se programa el json y el controlador para simular los datos que se necesitan de Información académica
