# swagger/swagger.json
@@ -15,51 +15,53 @@
     },
     "basePath": "/v1",
     "paths": {
-        "/movilidad/": {
+        "/academica/GetAcademica": {
+            "get": {
+                "tags": [
+                    "academica"
+                ],
+                "description": "get Academica",
+                "operationId": "AcademicaController.Get Academica",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Posicion"
+                        }
+                    },
+                    "403": {
+                        "description": "not found resource"
+                    }
+                }
+            }
+        },
+        "/convenio/GetConvenio": {
+            "get": {
+                "tags": [
+                    "convenio"
+                ],
+                "description": "get Convenio",
+                "operationId": "ConvenioController.Get Convenio",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Posicion"
+                        }
+                    },
+                    "403": {
+                        "description": "not found resource"
+                    }
+                }
+            }
+        },
+        "/movilidad/GetMovilidad": {
             "get": {
                 "tags": [
                     "movilidad"
                 ],
                 "description": "get Movilidad",
-                "operationId": "MovilidadController.Get All",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "query",
-                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "fields",
-                        "description": "Fields returned. e.g. col1,col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "sortby",
-                        "description": "Sorted-by fields. e.g. col1,col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "order",
-                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "limit",
-                        "description": "Limit the size of result set. Must be an integer",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "offset",
-                        "description": "Start position of result set. Must be an integer",
-                        "type": "string"
-                    }
-                ],
+                "operationId": "MovilidadController.Get Movilidad",
                 "responses": {
                     "200": {
                         "description": "",
@@ -67,122 +69,28 @@
                             "$ref": "#/definitions/models.Movilidad"
                         }
                     },
-                    "404": {
+                    "403": {
                         "description": "not found resource"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "movilidad"
-                ],
-                "description": "create Movilidad",
-                "operationId": "MovilidadController.Post",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for Movilidad content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Movilidad"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "{int} models.Movilidad"
-                    },
-                    "400": {
-                        "description": "the request contains incorrect syntax"
                     }
                 }
             }
         },
-        "/movilidad/{id}": {
+        "/movilidad/GetRondasLiga": {
             "get": {
                 "tags": [
                     "movilidad"
                 ],
-                "description": "get Movilidad by id",
-                "operationId": "MovilidadController.Get One",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The key for staticblock",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
+                "description": "get numero rondas liga",
+                "operationId": "MovilidadController.Get Numero Rondas liga",
                 "responses": {
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.Movilidad"
+                            "format": "int64",
+                            "type": "integer"
                         }
                     },
-                    "404": {
-                        "description": "not found resource"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "movilidad"
-                ],
-                "description": "update the Movilidad",
-                "operationId": "MovilidadController.Put",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to update",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for Movilidad content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Movilidad"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Movilidad"
-                        }
-                    },
-                    "400": {
-                        "description": "the request contains incorrect syntax"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "movilidad"
-                ],
-                "description": "delete the Movilidad",
-                "operationId": "MovilidadController.Delete",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to delete",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} delete success!"
-                    },
-                    "404": {
+                    "403": {
                         "description": "not found resource"
                     }
                 }
@@ -220,19 +128,23 @@
                 }
             }
         },
-        "models.TipoCategoria": {
-            "title": "TipoCategoria",
-            "type": "object"
-        },
-        "models.TipoMovilidad": {
-            "title": "TipoMovilidad",
+        "models.Posicion": {
+            "title": "Posicion",
             "type": "object"
         }
     },
     "tags": [
         {
+            "name": "convenio",
+            "description": "ConvenioController estructura para funciones y endpoints de convenio\n"
+        },
+        {
             "name": "movilidad",
-            "description": "MovilidadController operations for Movilidad\n"
+            "description": "MovilidadController for Movilidad\n"
+        },
+        {
+            "name": "academica",
+            "description": "AcademicaController estructura para funciones y endpoints de información academica\n"
         }
     ]
 }
